<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Element" Id="{e4ec2ffd-bd19-4159-87bf-998c97bdca2b}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation' := ''}
TYPE T_Element :
STRUCT
	pPrevElement: POINTER TO T_Element;
	pData: POINTER TO BYTE;
	uliKey: ULINT;
	pNextElement: POINTER TO T_Element;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>