<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_GHTHashTableBuffer" Id="{9458b7a3-2e7a-436d-bc39-d689d2603bfb}">
    <Declaration><![CDATA[TYPE T_GHTHashTableBuffer :
STRUCT
	aBuffer		: ARRAY[0..50-1] OF POINTER TO T_HashTableEntry;	
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>